--- a/apps/n8n/helmrelease.yaml
+++ b/apps/n8n/helmrelease.yaml
@@ -14,6 +14,8 @@ spec:
         name: bjw-s-charts
         namespace: applications
   values:
+    controller:
+      replicas: 0
     image:
       repository: ghcr.io/n8n-io/n8n
       tag: 0.220.0
