--- a/apps/n8n/helmrelease.yaml
+++ b/apps/n8n/helmrelease.yaml
@@ -17,6 +17,7 @@ spec:
     image:
       repository: ghcr.io/n8n-io/n8n
       tag: 0.220.0
+    command: ["n8n"]
     env:
       GENERIC_TIMEZONE: Europe/Amsterdam
       WEBHOOK_URL: https://n8n.bo0tzz.me
