--- a/apps/n8n/helmrelease.yaml
+++ b/apps/n8n/helmrelease.yaml
@@ -59,8 +59,9 @@ spec:
       main:
         enabled: true
         annotations:
-          kubernetes.io/ingress.class: nginx-internal
+          kubernetes.io/ingress.class: nginx
           cert-manager.io/cluster-issuer: letsencrypt-prod
+          external-dns.alpha.kubernetes.io/target: bo0tzz.me
         hosts:
           - host: &host "n8n.bo0tzz.me"
             paths:
