--- a/apps/immich/secret.yaml
+++ b/apps/immich/secret.yaml
@@ -6,14 +6,15 @@ metadata:
 type: Opaque
 stringData:
     JWT_SECRET: ENC[AES256_GCM,data:RlvAtV/4C6+0Ukdpq9xC037JHmYqzuoYhWWrOSOd9ea6rzkHGV3hc0paRWmBlORawY6Kp4Wc7KML7Z+45g==,iv:iluLKIBNbKbHROkOMDxlbBEmrwp7ohGhhGiO7Hi0sa8=,tag:zAqMyLq/imox0VIi8HzUxA==,type:str]
+    TYPESENSE_API_KEY: ENC[AES256_GCM,data:5Go0KvNFoSqTlmOHlKJIOH1BbjM9YyOvN++Ypnd7J4aWZ5rFIHReXbudew==,iv:LxyTiWcxuQPziyQIE1TYlxBX7AsyMzRSZiXS0venICQ=,tag:9keWwEFHnake1cdxrv6jgA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-09-22T15:46:33Z"
-    mac: ENC[AES256_GCM,data:ewUsD2Cs06Ht1pI6NwBSJtAkXFFNH82ucX+e2H4HfiUyk5BJcF2oB32uPvqPaZNOwSyzxTF8UtEksodzBzpvBg0wcsXjgV9FFqiWdW5bHFl3QtVbJKcY/AoN81e7GnL4S8pC+UIej1TXN+iGnx88ADd7nTe2oVXrOHRsPBtVDSY=,iv:Hm7sp8MAOg06gklZZpQbmYvSVw5I0E4P5qlGpdrbqZo=,tag:llz7YAA89vbdYAgJojuGjQ==,type:str]
+    lastmodified: "2023-03-29T19:21:29Z"
+    mac: ENC[AES256_GCM,data:52XLCgWLJHsex2imAuU9YWyLA+PZ+zd7jrbVhz5+SowzwHoHTnMp81keyMs43eKi2Mv26cAFB86iCoVla4wfKTT3HHrRln71BgyMxbyQbIaHPIsfJgNgIEDoUGgX3POpZp+FtOEAnGtsHmJGbu5I3FKZ49GxBs13Uh+eM/OwmjE=,iv:Ij7WptK9miPtu8alQMgfzwbXsM50p400iLs+knT/BBo=,tag:yp/UsMbOSy6ADZOseb0N9Q==,type:str]
     pgp:
         - created_at: "2022-09-22T15:46:33Z"
           enc: |
