Set datadir for typesense

--- a/apps/immich/typesense.yaml
+++ b/apps/immich/typesense.yaml
@@ -20,6 +20,8 @@ spec:
     envFrom:
       - secretRef:
           name: immich-config
+    env:
+      TYPESENSE_DATA_DIR: /config
     service:
       main:
         ports:
