--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -18,7 +18,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: ./charts/apps/immich
+      chart: ./charts/immich
       sourceRef:
         kind: GitRepository
         name: immich-charts
