Scale up immich microservices

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -66,6 +66,10 @@ spec:
             key: DATABASE_NAME
       LOG_LEVEL: verbose
 
+    microservices:
+      controller:
+        replicas: 2
+
     proxy:
       ingress:
         main:
