--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -1,14 +1,3 @@
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: GitRepository
-metadata:
-  name: immich-charts
-  namespace: immich
-spec:
-  interval: 1h
-  url: https://github.com/immich-app/immich-charts.git
-  ref:
-    branch: refactor
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -18,9 +7,10 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: ./charts/immich
+      chart: immich
+      version: 0.1.0
       sourceRef:
-        kind: GitRepository
+        kind: HelmRepository
         name: immich-charts
         namespace: immich
       interval: 1m
