Update immich to v1.54.0

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -59,6 +59,9 @@ spec:
             name: database-immich-user
             key: DATABASE_NAME
       LOG_LEVEL: verbose
+    
+    image:
+      tag: v1.54.0
 
     server:
       resources:
