--- a/database/ext-postgres-operator/operator.yaml
+++ b/database/ext-postgres-operator/operator.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccountName: ext-postgres-operator
       containers:
         - name: ext-postgres-operator
-          image: movetokube/postgres-operator:1.2.0
+          image: ghcr.io/movetokube/postgres-operator:1.2.2
           command:
           - postgres-operator
           imagePullPolicy: Always
