Quote immich tag

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -62,7 +62,7 @@ spec:
     
     image:
       # renovate: datasource=github-releases depName=immich-app/immich
-      tag: v1.54.0
+      tag: "v1.54.0"
 
     server:
       resources:
