Grow sonarr config volume

--- a/media/sonarr.yaml
+++ b/media/sonarr.yaml
@@ -36,6 +36,7 @@ spec:
       config:
         enabled: true
         storageClass: zfs-iscsi
+        size: 2Gi
       media:
         enabled: true
         existingClaim: media-library
