--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: '45.31.0'
+      version: "45.31.0"
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
@@ -46,10 +46,10 @@ spec:
                 requests:
                   storage: 50Gi
         additionalScrapeConfigs:
-          - job_name: 'apcups'
+          - job_name: "apcups"
             static_configs:
               - targets:
-                - 192.168.1.102
+                  - 10.0.0.5
             metrics_path: /snmp
             params:
               module: [apcups]
