experiment: Separate esphome volume from helm, vol 2

--- a/apps/esphome/esphome.yaml
+++ b/apps/esphome/esphome.yaml
@@ -55,6 +55,4 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: zfs-iscsi
-        accessMode: ReadWriteOnce
-        size: 1Gi
+        existingClaim: esphome-config
