--- a/apps/helm-repository.yaml
+++ b/apps/helm-repository.yaml
@@ -39,5 +39,6 @@ kind: HelmRepository
 metadata:
   name: gabe565
   namespace: applications
+spec:
   interval: 1h
   url: https://charts.gabe565.com
