--- a/apps/tandoor/helmrelease.yaml
+++ b/apps/tandoor/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
       repository: ghcr.io/tandoorrecipes/recipes
       tag: 1.5.4
     env:
+      SOCIAL_DEFAULT_ACCESS: True
       DB_ENGINE: django.db.backends.postgresql
       POSTGRES_HOST:
         valueFrom:
