--- a/apps/tandoor/helmrelease.yaml
+++ b/apps/tandoor/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       repository: ghcr.io/tandoorrecipes/recipes
       tag: 1.5.4
     env:
-      SOCIAL_DEFAULT_ACCESS: True
+      SOCIAL_DEFAULT_ACCESS: 1
       DB_ENGINE: django.db.backends.postgresql
       POSTGRES_HOST:
         valueFrom:
