--- a/apps/kitchenowl/secret.yaml
+++ b/apps/kitchenowl/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: kitchenowl-secret
-    namespace: organisation
+    namespace: applications
 stringData:
     TZ: ENC[AES256_GCM,data:uLx16jcSHvOlVD9pnom/bQ==,iv:g1ZT8XS1tkfY7LU/yYUIzMLbQSSQ0PPdasC/n3Kwrg0=,tag:/W8L+jCOx6HCioR5kkMQKw==,type:str]
     JWT_SECRET_KEY: ENC[AES256_GCM,data:ky+K/7MJof3fGwc0fFvaOVChQkSICNsoJigCEz+P+OQxuop0Fp3WmMW/P0w=,iv:YO8km/rSaf9GX81rHhQpvSgzEwnykvu0sfjTH9EvYj8=,tag:g21A6JSnMc1J8Zc81Qz0AA==,type:str]
@@ -12,8 +12,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-08-02T10:59:30Z"
-    mac: ENC[AES256_GCM,data:L5kLR5gPBaIUhpXiHxK5VC3QAXAYvvjeYXecEdO+OB9TXT1m9Lrvpnibic6qRX4VK+kSH/ElBrW00YIZsTYS8g6hmA8pduDbHPLDpkn8MimTBDo1dr4SVaCkzYQYeRIC0D1y/g3s1xyUd1++PLQ4cOVG4rTWM4VhhCakjnrPYtA=,iv:XB6F5BGYtzTaq+FD+9v5zoMZnM/Gz2nbrVtJ2Kq13E4=,tag:Wgt8jYxFR02NvOHe1o8X0w==,type:str]
+    lastmodified: "2023-08-02T11:01:45Z"
+    mac: ENC[AES256_GCM,data:RAK7DZwNNWrH5FvDJpgucsh6j6a8x0kO1TUr7qMzft+Jz1S7UxK2AmEihb1vZlBcP4+btOXyr3t1PZrxMU17CmpAshoVY6zwfexq6n7nrnwEl0rD4/+nOOhyGFfmu6LwYzi8WvGXlYpWJa6elefMSOwbh1qW32zDfclIlGTjKIE=,iv:Hb3PZQgA+4oMo2s2OH6Q9wOuHxtnc3IfUvzgFa3o+bQ=,tag:82tJNKcoPfmtGy1gpne7ig==,type:str]
     pgp:
         - created_at: "2023-08-02T10:59:26Z"
           enc: |
