--- a/media/jackett.yaml
+++ b/media/jackett.yaml
@@ -19,6 +19,9 @@ spec:
       # pain
       repository: ghcr.io/linuxserver/jackett
       tag: "0.21.637"
+    env:
+      PUID: "568"
+      PGID: "568"
     service:
       main:
         ports:
