--- a/media/prowlarr.yaml
+++ b/media/prowlarr.yaml
@@ -48,6 +48,11 @@ spec:
       config:
         enabled: true
         storageClass: zfs-iscsi
+    podSecurityContext:
+      runAsUser: 568
+      runAsGroup: 568
+      fsGroup: 568
+      fsGroupChangePolicy: "OnRootMismatch"
     resources:
       requests:
         cpu: 10m
