Enable oauth for miniflux

--- a/apps/miniflux/secret.yaml
+++ b/apps/miniflux/secret.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 data:
-    admin-password: ENC[AES256_GCM,data:Ea10nUtSybz1zkc8QUuQZyahgifsy6BVUie9DosIs5axWAFWAUm0LyybaoE=,iv:oX9KsZSMmzxEQHPPs6s1SKA84Knjx/Ps3xdZaDCg79g=,tag:VP3qiqVM4f7q079hfJTJpQ==,type:str]
+    ADMIN_PASSWORD: ENC[AES256_GCM,data:BnbEXjpHkTdFcXaQWTrELKV+QM0tqRDrAK+5x8oYmNuw0CCmXmOCAyvBlGQ=,iv:vK7Gtx0i/MOCX8QZXZV3ar8mcOKHMpi70mVQQwMrO8E=,tag:CsCMBPB0MAG0rhLBImci+g==,type:str]
+    OAUTH2_CLIENT_ID: ENC[AES256_GCM,data:4NuHTxjP4BVX3b0N/Q9yOen8OPbBBrIijK+FssDr4F4hiIrFSI6yI5nz6GqcBsC9r5l0Yi8Rggk=,iv:ypwePEldemWZRWRyJnWml8MYJvJXCH/0I+DH3aiQrHY=,tag:dhOsqjfkhlh/2rvK5j6SoA==,type:str]
+    OAUTH2_CLIENT_SECRET: ENC[AES256_GCM,data:zj6v1GyNxeESThgN3O6AGqrViQqeg4uzNvd6ryOGlEEMjmbO3JmujeJVtmj4hUJ4xlfjXzO0qRJBAY7oa7I4ux0MhViXVJDhJbSjE5Vb4ckopDKECTbjac1O1zsHb9YfF19m0kCgMT2/DiKLbAq1gWhowz0T7btuoPVeojZ3BOqnbT2pqFQt8NA0RJgBimgaHeMUAhtuNzDZNNUnavrGlCzJJZFZ/2Kf7w3M6w==,iv:XkvyjjDxpb+k9qpLO1uGHjrY/sow0ipvidcMKS+XVZ4=,tag:rA0x+6vZuGedQTjG0cz7IQ==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -12,8 +14,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-06-12T13:12:52Z"
-    mac: ENC[AES256_GCM,data:MPLKXgfsqtzxxmoRUORNr8Ypq0y4THU0CydWd2zVxn7veVCV+bq/uXY3wRkUGjAuZERL2A4UI0T//Bcgzr0/UGe3CjwTqejubqw5ZIcwIXnE3ze98C/2XVChYdzgXMMxOL7OPK+8lqpM7ZtK/AcG9mieKwVEpViwZkqUs8kcjqY=,iv:5EbTr4rclragFNEhlqZk3DzUnbnioD9mkuQrY8dU2Ko=,tag:SiS2YwZF5xBFPAHPjAMKDA==,type:str]
+    lastmodified: "2023-09-16T18:53:29Z"
+    mac: ENC[AES256_GCM,data:AGLVBIRc4AjDHb8dLAJiCVMmxw8XfRm94M8jo4ruls/enocXqgNHHy0D67BPlkn3g7PRLHUWcIiwwf/q/S1dnd1/A7otzMxy1tkhfmJHLOeBVqR9JOAaIc2Y7fNpkR4dyiLT28UcN9MPPuy1Uk7NcODBoZwPkp4KFh+uf58h06Y=,iv:uj6E6L054Vbt8tt9yp/KlaE+AJ/vh/6Z8b1q7pgz3p0=,tag:sve7OF9ef5e7GWEkgadJ4g==,type:str]
     pgp:
         - created_at: "2022-06-12T13:12:52Z"
           enc: |
