--- a/apps/miniflux/miniflux.yaml
+++ b/apps/miniflux/miniflux.yaml
@@ -23,17 +23,18 @@ spec:
         ports:
           http:
             port: 8080
+    envFrom:
+      - secretRef:
+          name: miniflux-secret
     env:
       BASE_URL: https://feed.bo0tzz.me
       POLLING_PARSING_ERROR_LIMIT: 0
       RUN_MIGRATIONS: 1
       CREATE_ADMIN: 1
       ADMIN_USERNAME: boet
-      ADMIN_PASSWORD:
-        valueFrom:
-          secretKeyRef:
-            name: miniflux-secret
-            key: admin-password
+      OAUTH2_PROVIDER: oidc
+      OAUTH2_REDIRECT_URL: https://miniflux.bo0tzz.me/oauth2/oidc/callback
+      OAUTH2_OIDC_DISCOVERY_ENDPOINT: https://authentik.auth/application/o/miniflux/
       DATABASE_URL:
         valueFrom:
           secretKeyRef:
