--- a/apps/miniflux/miniflux.yaml
+++ b/apps/miniflux/miniflux.yaml
@@ -34,7 +34,7 @@ spec:
       ADMIN_USERNAME: boet
       OAUTH2_PROVIDER: oidc
       OAUTH2_REDIRECT_URL: https://miniflux.bo0tzz.me/oauth2/oidc/callback
-      OAUTH2_OIDC_DISCOVERY_ENDPOINT: https://authentik.auth/application/o/miniflux/
+      OAUTH2_OIDC_DISCOVERY_ENDPOINT: https://auth.bo0tzz.me/application/o/miniflux/
       DATABASE_URL:
         valueFrom:
           secretKeyRef:
