--- a/apps/miniflux/miniflux.yaml
+++ b/apps/miniflux/miniflux.yaml
@@ -47,6 +47,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: nginx
           cert-manager.io/cluster-issuer: letsencrypt-prod
+          external-dns.alpha.kubernetes.io/target: bo0tzz.me
         hosts:
           - host: feed.bo0tzz.me
             paths:
