--- a/database/app-db.yaml
+++ b/database/app-db.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   instances: 3
   imageName: ghcr.io/cloudnative-pg/postgresql:14.9
+  enableSuperuserAccess: true
 
   storage:
     storageClass: local-path
