Set tls secret name for windmill

--- a/automation/windmill/helmrelease.yaml
+++ b/automation/windmill/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
       tls:
         - hosts:
             - *host
+          secretName: windmill-tls
     postgresql:
       enabled: false
   valuesFrom:
