--- a/apps/vaultwarden/helmrelease.yaml
+++ b/apps/vaultwarden/helmrelease.yaml
@@ -28,6 +28,7 @@ spec:
         enabled: true
         existingClaim: vaultwarden-config
     env:
+      SIGNUPS_ALLOWED: false
       DATABASE_URL:
         valueFrom:
           secretKeyRef:
