Update nfd config

--- a/infrastructure/node-feature-discovery/hr.yaml
+++ b/infrastructure/node-feature-discovery/hr.yaml
@@ -21,6 +21,11 @@ spec:
     crds: CreateReplace
   values:
     worker:
+      config:
+        sources:
+          usb:
+            deviceClassWhitelist: ["02", "03", "0a", "0e", "ef", "fe", "ff"]
+            deviceLabelFields: ["class", "vendor", "device"]
       resources:
         requests:
           cpu: 15m
