Enable renovate automerge on PR approval

--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,8 @@
     ":disableRateLimiting",
     ":dependencyDashboard",
     ":semanticCommits"
-  ],  
+  ],
+  "automerge": true,
   "suppressNotifications": ["prIgnoreNotification"],
   "helm-values": {
     "fileMatch": [
