--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     ":semanticCommits"
   ],
   "automerge": true,
+  "rebaseWhen": "conflicted",
   "suppressNotifications": ["prIgnoreNotification"],
   "helm-values": {
     "fileMatch": [
