--- a/automation/zigbee2mqtt/helmrelease.yaml
+++ b/automation/zigbee2mqtt/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
       version: 2.4.0
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: bjw-s-charts
         namespace: automation
   maxHistory: 2
   install:
