--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -60,3 +60,10 @@ spec:
                 target_label: instance
               - target_label: __address__
                 replacement: snmp-exporter-prometheus-snmp-exporter:9116
+          - job_name: zigbee2mqtt
+            scrape_interval: 15s
+            scrape_timeout: 10s
+            honor_timestamps: true
+            static_configs:
+              - targets:
+                  - "zigbee2mqtt-exporter"
