--- a/apps/miniflux/miniflux.yaml
+++ b/apps/miniflux/miniflux.yaml
@@ -29,6 +29,7 @@ spec:
     env:
       BASE_URL: https://feed.bo0tzz.me
       POLLING_PARSING_ERROR_LIMIT: 0
+      POLLING_SCHEDULER: entry_frequency
       RUN_MIGRATIONS: 1
       CREATE_ADMIN: 1
       ADMIN_USERNAME: boet
