--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -88,6 +88,8 @@ spec:
           memory: 2048M
 
     machine-learning:
+      controller:
+        replicas: 2
       resources:
         requests:
           cpu: 500m
