--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -67,3 +67,6 @@ spec:
             static_configs:
               - targets:
                   - "zigbee2mqtt-exporter.automation"
+          - job_name: pve
+            static_configs:
+            - targets: ['192.168.2.1:9100']
