--- a/media/emby.yaml
+++ b/media/emby.yaml
@@ -51,6 +51,21 @@ spec:
           - hosts:
               - emby.bo0tzz.me
             secretName: emby-web-tls
+      external:
+        enabled: true
+        annotations:
+          kubernetes.io/ingress.class: nginx
+          cert-manager.io/cluster-issuer: letsencrypt-prod
+          auth.kube.bo0tzz.me/enabled: "true"
+        hosts:
+          - host: emby-external.bo0tzz.me
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - emby-external.bo0tzz.me
+            secretName: emby-external-web-tls
     resources:
       requests:
         cpu: 1
