--- a/media/emby.yaml
+++ b/media/emby.yaml
@@ -57,6 +57,7 @@ spec:
           kubernetes.io/ingress.class: nginx
           cert-manager.io/cluster-issuer: letsencrypt-prod
           auth.kube.bo0tzz.me/enabled: "true"
+          external-dns.alpha.kubernetes.io/target: bo0tzz.me
         hosts:
           - host: emby-external.bo0tzz.me
             paths:
