--- a/media/emby.yaml
+++ b/media/emby.yaml
@@ -56,7 +56,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: nginx
           cert-manager.io/cluster-issuer: letsencrypt-prod
-          external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
+          external-dns.alpha.kubernetes.io/exclude: "true"
           auth.kube.bo0tzz.me/enabled: "true"
         hosts:
           - host: emby-external.bo0tzz.me
