--- a/database/app-db.yaml
+++ b/database/app-db.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: database
 spec:
   instances: 3
-  imageName: ghcr.io/bo0tzz/cnpgvecto.rs:14.10-v0.2.0
+  imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:14.11-v0.2.0
   enableSuperuserAccess: true
 
   postgresql:
