chore(immich): Add ML liveness initialDelay

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -98,3 +98,7 @@ spec:
           type: pvc
           accessMode: ReadWriteOnce
           storageClass: zfs-iscsi
+      probes:
+        liveness:
+          spec:
+            initialDelaySeconds: 120
