--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -100,6 +100,8 @@ spec:
           storageClass: zfs-iscsi
       probes:
         liveness:
-          enabled: false
+          spec:
+            initialDelaySeconds: 120
         readiness:
-          enabled: false
+          spec:
+            initialDelaySeconds: 120
