--- a/infrastructure/monitoring/repo.yaml
+++ b/infrastructure/monitoring/repo.yaml
@@ -6,3 +6,12 @@ metadata:
 spec:
   interval: 1h
   url: https://prometheus-community.github.io/helm-charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: bjw-s-charts
+  namespace: monitoring
+spec:
+  interval: 1h
+  url: https://bjw-s.github.io/helm-charts/
