--- a/infrastructure/monitoring/shelly-exporter.yaml
+++ b/infrastructure/monitoring/shelly-exporter.yaml
@@ -35,6 +35,7 @@ spec:
             port: 54901
     serviceMonitor:
       main:
+        serviceName: shelly-exporter
         endpoints:
           - port: http
             scheme: http
