Manage z2m config volume explicitly

--- a/automation/zigbee2mqtt/helmrelease.yaml
+++ b/automation/zigbee2mqtt/helmrelease.yaml
@@ -99,6 +99,4 @@ spec:
     persistence:
       config:
         enabled: true
-        accessMode: ReadWriteOnce
-        storageClass: zfs-iscsi
-        size: 1Gi
+        existingClaim: zigbee2mqtt-config
