set ml cache type

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -95,6 +95,7 @@ spec:
           memory: 4096M
       persistence:
         cache:
+          type: pvc
           existingClaim: immich-machine-learning-cache
       probes:
         liveness:
