--- a/automation/zigbee2mqtt/helmrelease.yaml
+++ b/automation/zigbee2mqtt/helmrelease.yaml
@@ -66,6 +66,7 @@ spec:
               ZIGBEE2MQTT_CONFIG_PERMIT_JOIN: "false"
               ZIGBEE2MQTT_CONFIG_SERIAL_PORT: tcp://192.168.178.7:6638
               ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER: zstack 
+              ZIGBEE2MQTT_CONFIG_ADVANCED_TRANSMIT_POWER: 20
             securityContext:
               privileged: true
             resources:
