And a tls.secretName :)

--- a/apps/actual/helmrelease.yaml
+++ b/apps/actual/helmrelease.yaml
@@ -63,6 +63,7 @@ spec:
         tls:
           - hosts:
               - *hostName
+            secretName: actual-tls
 
     persistence:
       data:
