--- a/media/emby.yaml
+++ b/media/emby.yaml
@@ -18,6 +18,9 @@ spec:
     image:
       repository: emby/embyserver
       tag: 4.9.0.17
+    env:
+      UID: 568
+      GID: 568
     service:
       main:
         ports:
