Trigger Immich library backup

--- a/apps/immich/backup/backup.yaml
+++ b/apps/immich/backup/backup.yaml
@@ -7,7 +7,7 @@ spec:
   sourcePVC: photo-library
   trigger:
     schedule: 0 23 * * *
-    manual: first-run
+    manual: ohgod
   restic:
     pruneIntervalDays: 14
     repository: immich-restic-secret
