Set persistence enabled+type

--- a/apps/zipline/zipline.yaml
+++ b/apps/zipline/zipline.yaml
@@ -59,6 +59,8 @@ spec:
 
     persistence:
       data:
+        enabled: true
+        type: persistentVolumeClaim
         existingclaim: zipline-data
 
     service:
