--- a/apps/zipline/zipline.yaml
+++ b/apps/zipline/zipline.yaml
@@ -59,9 +59,7 @@ spec:
 
     persistence:
       data:
-        enabled: true
-        type: persistentVolumeClaim
-        existingclaim: zipline-data
+        existingClaim: zipline-data
 
     service:
       app:
