--- a/apps/minecraft.yaml
+++ b/apps/minecraft.yaml
@@ -15,6 +15,8 @@ spec:
         namespace: applications
       interval: 1h
   values:
+    image:
+      pullPolicy: Always
     resources:
       requests:
         cpu: 1
