--- a/apps/libreddit.yaml
+++ b/apps/libreddit.yaml
@@ -36,7 +36,7 @@ spec:
       main:
         enabled: true
         annotations:
-          kubernetes.io/ingress.class: nginx
+          kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
           external-dns.alpha.kubernetes.io/target: bo0tzz.me
         hosts:
